- 更新 ImmortalWrt 版本到 24.10.2
- 更新 UU 加速器和 FakeHTTP 的版本
- 新增 luci-app-cloudflared